# CoMISo

./: CHANGELOG  CMakeLists.txt  README.txt  VERSION
CoMISo/Config/: config.hh.in
CoMISo/NSolver/: GUROBISolver.cc  IPOPTSolver.hh
Config/: CoMISoDefines.hh  config.hh.in
EigenSolver/: ArpackSolver.cc  ArpackSolver.hh  EigenArpackMatrixT.cc  EigenArpackMatrixT.hh
Examples/factored_solver/: CMakeLists.txt  main.cc
Examples/quadratic_solver/: CMakeLists.txt  main.cc
Examples/small_adolc/: CMakeLists.txt  main.cc
Examples/small_cplex_soc/: main.cc
Examples/small_eigenproblem/: CMakeLists.txt  main.cc
Examples/small_factored_example/: CMakeLists.txt  main.cc
Examples/small_miqp/: CMakeLists.txt  main.cc
Examples/small_nleast_squares/: CMakeLists.txt
Examples/small_nsolver/: main.cc
Examples/small_quadratic_example/: CMakeLists.txt
Examples/small_quadratic_resolve_example/: CMakeLists.txt
Examples/small_sparseqr/: CMakeLists.txt  main.cc
Examples/test2/: CMakeLists.txt  main.cc
NSolver/: BoundConstraint.hh  CPLEXSolver.cc  CPLEXSolver.hh  CPLEXSolverT.cc  FiniteElementProblem.hh  GUROBISolver.cc  GurobiHelper.cc  IPOPTSolver.cc  IPOPTSolver.hh  LinearConstraint.cc  LinearConstraint.hh  LinearConstraintHandlerElimination.hh  LinearConstraintHandlerEliminationT.cc  LinearConstraintHandlerPenalty.cc  LinearConstraintHandlerPenalty.hh  LinearConstraintHandlerPenaltyT.cc  LinearProblem.hh  NConstraintGmmInterface.hh  NConstraintInterface.hh  NConstraintInterfaceAD.hpp  NPDerivativeChecker.hh  NPLinearConstraints.hh  NPTiming.cc  NPTiming.hh  NProblemGmmInterface.hh  NProblemInterface.hh  NProblemInterfaceAD.hpp  NProblemInterfaceADOLC.hh  NewtonSolver.cc  NewtonSolver.hh  SuperSparseMatrixT.hh  TAOSolver.cc  TAOSolver.hh  TapeIDSingleton.hh  VariableType.hh
QtWidgets/: MISolverDialog.cc  MISolverDialog.hh  MISolverDialogUI.cc  MISolverDialogUI.hh  QtMISolverDialogBase.ui  QtMISolverDialogBaseUI.ui
Solver/: CholmodSolver.cc  CholmodSolver.hh  CholmodSolverT.cc  ConstrainedSolver.cc  ConstrainedSolver.hh  ConstrainedSolverT.cc  EigenLDLTSolver.cc  Eigen_Tools.cc  Eigen_Tools.hh  GMM_Tools.cc  GMM_Tools.hh  MISolver.cc  MISolver.hh  MISolverT.cc  SparseQRSolver.cc  SparseQRSolver.hh  TaucsSolver.cc  UMFPACKSolver.cc  UMFPACKSolver.hh
Utils/: ColorCoder.hh  StopWatch.hh  VSToolsT.hh
cmake/: ACGCommon.cmake  CoMISoExample.cmake  FindARPACK.cmake  FindCGAL.cmake  FindCoMISo.cmake  FindGUROBI.cmake  FindIPOPT.cmake  FindSUITESPARSE.cmake
trunk/CoMISo/: BUILD_WIN.txt  CMakeLists.txt  README.txt
trunk/CoMISo/Config/: CoMISoDefines.hh  config.hh.in
trunk/CoMISo/Examples/factored_solver/: CMakeLists.txt  main.cc
trunk/CoMISo/Examples/quadratic_solver/: CMakeLists.txt  main.cc
trunk/CoMISo/Examples/small_adolc/: main.cc
trunk/CoMISo/Examples/small_cplex_soc/: CMakeLists.txt  main.cc
trunk/CoMISo/Examples/small_eigenproblem/: CMakeLists.txt  main.cc
trunk/CoMISo/Examples/small_factored_example/: CMakeLists.txt  main.cc
trunk/CoMISo/Examples/small_finite_element/: CMakeLists.txt
trunk/CoMISo/Examples/small_linear_problem/: CMakeLists.txt  main.cc
trunk/CoMISo/Examples/small_miqp/: CMakeLists.txt  main.cc
trunk/CoMISo/Examples/small_nleast_squares/: CMakeLists.txt
trunk/CoMISo/Examples/small_nsolver/: CMakeLists.txt
trunk/CoMISo/Examples/small_quadratic_example/: CMakeLists.txt  main.cc
trunk/CoMISo/Examples/small_sparseqr/: main.cc
trunk/CoMISo/Examples/test2/: CMakeLists.txt  main.cc
trunk/CoMISo/LICENSE/: COPYING.EXCEPTIONS  LICENSEHEADER
trunk/CoMISo/NSolver/: BoundConstraint.cc  BoundConstraint.hh  CPLEXSolver.cc  CPLEXSolver.hh  CPLEXSolverT.cc  ConeConstraint.cc  GUROBISolver.cc  GUROBISolver.hh  GurobiHelper.cc  IPOPTSolver.cc  IPOPTSolver.hh  LinearConstraint.cc  LinearConstraint.hh  LinearConstraintHandlerElimination.cc  LinearConstraintHandlerElimination.hh  LinearConstraintHandlerEliminationT.cc  LinearConstraintHandlerPenalty.cc  NConstraintGmmInterface.cc  NConstraintGmmInterface.hh  NConstraintInterface.hh  NConstraintInterfaceAD.hpp  NPDerivativeChecker.hh  NPLinearConstraints.hh  NPTiming.hh  NProblemGmmInterface.hh  NProblemInterface.hh  NProblemInterfaceAD.hpp  NProblemInterfaceADOLC.hh  NSolverGmmInterface.hh  NewtonSolver.cc  SuperSparseMatrixT.hh  TAOSolver.cc  TAOSolver.hh  TapeIDSingleton.hh  TestInterface.hh
trunk/CoMISo/QtWidgets/: MISolverDialog.cc  MISolverDialog.hh  MISolverDialogUI.cc  QtMISolverDialogBaseUI.ui
trunk/CoMISo/Solver/: CholmodSolver.cc  CholmodSolver.hh  CholmodSolverT.cc  ConstrainedSolver.cc  ConstrainedSolver.hh  ConstrainedSolverT.cc  EigenLDLTSolver.hh  EigenLDLTSolverT.cc  Eigen_Tools.cc  Eigen_Tools.hh  GMM_Tools.cc  GMM_Tools.hh  MISolver.cc  MISolver.hh  MISolverT.cc  SparseQRSolver.hh  SparseQRSolverT.cc  TaucsSolver.hh  TaucsSolverT.cc
trunk/CoMISo/Utils/: ColorCoder.hh  VSToolsT.hh
trunk/CoMISo/cmake/: CoMISoExample.cmake  FindARPACK.cmake  FindCoMISo.cmake  FindEigen3.cmake  FindGMM.cmake  FindIPOPT.cmake  FindSUITESPARSE.cmake  FindTAO.cmake
